# temfpy

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: github_pages.yaml  release.yaml
_modules/: index.html
_modules/temfpy/: gutzwiller.html  iMPS.html  pfaffian.html  schmidt_utils.html  slater.html  testing.html  utils.html
_sources/: index.md.txt
_sources/examples/: gutzwiller.rst.txt  iMPS.rst.txt  iMPS_pfaffian.rst.txt  iMPS_slater.rst.txt  pfaffian.rst.txt  slater.rst.txt
_sources/getting_started/: citing.md.txt  examples.md.txt
_sources/reference/: gutzwiller.rst.txt  iMPS.rst.txt  schmidt_utils.rst.txt  testing.rst.txt  utils.rst.txt
docs/: .gitignore
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/getting_started/: contribute.md  installation.md
docs/source/reference/: gutzwiller.rst  pfaffian.rst  slater.rst
examples/: gutzwiller.html  iMPS.html  iMPS_pfaffian.html  iMPS_slater.html  pfaffian.html  slater.html
getting_started/: citing.html  contribute.html  examples.html  installation.html
reference/: gutzwiller.html  iMPS.html  pfaffian.html  schmidt_utils.html  slater.html  testing.html  utils.html
src/examples/: gutzwiller.py  iMPS.py  iMPS_pfaffian.py  iMPS_slater.py  pfaffian.py  slater.py
src/temfpy/: __init__.py  gutzwiller.py  iMPS.py  pfaffian.py  schmidt_utils.py  slater.py  testing.py  utils.py
